# 0-dex

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  MAINNET_GATES.md  MAINNET_SCOPE.md  OPERATIONS_RUNBOOK.md  PRODUCTION_ROADMAP.md  README.md  SECURITY_INVARIANTS.md  SWARM_ROUTING.md  TODO.md  pyproject.toml  requirements-research.txt
agents/: README.md  __init__.py  ppo_trainer.py
audit/: AUDIT_REPORT.md
contracts/: ZeroDexEscrow.sol
docs/: zero-lang-integration-spec.md
docs/sun_parliament/: phase_28_evolution.md  phase_29_evolution.md  phase_30_evolution.md  phase_31_evolution.md  phase_32_evolution.md
envs/: README.md  __init__.py  dark_pool_env.py  ephemeral_tensor.py  orderbook.py
experiments/: README.md  __init__.py  run_experiment.py
experiments/config/: baseline.yaml  byzantine_20.yaml  byzantine_30.yaml
graphs/intents/: limit.0
graphs/pools/: amm.0  raydium_bridge.0  uniswap_bridge.0
programs/zero_dex_escrow/: Cargo.toml
programs/zero_dex_escrow/src/: lib.rs
python/: setup.py
python/tests/: test_client_payload.py
python/zero_dex_lite/: __init__.py  client.py  generators.py
research/: README.md  __init__.py  pyproject.toml
research/agents/: README.md  __init__.py  a3c_trainer.py  gnn_a3c.py  gnn_router.py  graph_builder.py  ppo_trainer.py
research/envs/: README.md  __init__.py  dark_pool_env.py  darkpool_pomdp.py  ephemeral_tensor.py
research/envs/baselines/: __init__.py  oneinch_agg.py  uniswap_v3.py
research/experiments/: README.md  run_experiment.py
research/experiments/config/: baseline.yaml  baseline_1inch.yaml  baseline_uniswap.yaml  byzantine_20.yaml  byzantine_30.yaml  eta_sweep.yaml
research/simulation/: README.md  __init__.py  brier_score.py  byzantine.py  byzantine_spoofing.py  metrics.py  runner.py
research/zk/: README.md  __init__.py  tensor_commitment.py
research/zk/circom/: package.json
scripts/: preflight.sh  run-node.sh
simulation/: README.md  __init__.py  brier_score.py  byzantine.py  federation.py  runner.py
skills/0-dex/: SKILL.md  tools.json
skills/0-dex/scripts/: limit_order.py
src/: abi.rs  api.rs  crypto.rs  intent_pool.rs  intent_watcher.rs  liquidity_relayer.rs  main.rs  matching.rs  metrics.rs  network.rs  node_mode.rs  protocol.rs  settlement.rs  solver.rs  upstream.rs  vm_bridge.rs
src/privacy/: fhe.rs  mod.rs  naked.rs  tee.rs  zk.rs
tasks/: todo.md
test/: ZeroDexEscrow.t.sol
testdata/: signing_vector.json
zk/: README.md  __init__.py
zk/circom/: README.md  tensor_proof.circom
zk/halo2/: README.md  tensor_verify.py
