[package]
name = "zero-dex"
version = "0.1.0"
edition = "2021"
description = "Agent-native decentralized exchange powered by 0-lang"
license = "AGPL-3.0-or-later"

[dependencies]
zerolang = { git = "https://github.com/0-protocol/0-lang.git" }
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
hyper = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
