[package]
name = "zero-dex"
version = "0.1.0"
edition = "2021"
description = "Agent-native decentralized exchange powered by 0-lang"
license = "AGPL-3.0-or-later"

[dependencies]
zerolang = { git = "https://github.com/0-protocol/0-lang.git" }
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
hyper = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
ethabi = "18.0"
ethers = "2.0"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
prometheus = "0.13"
lazy_static = "1.4"
